# rp2040-selfdebug

./: .gitmodules  Cargo.toml  README.md  build.rs  flake.nix
.cargo/: config.toml
CMSIS_5/CMSIS/DAP/Firmware/Source/: DAP.c
CMSIS_Config/: DAP_config.h
examples/: minimal.rs  pico_blinky.rs
src/: cmsis_dap.rs  lib.rs  main.rs
src/cmsis_dap/: c_if.rs  usb_class.rs
