[package]
name = "rp-selfdebug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-hal = "0.2.7"
panic-probe = "0.3.1"
rp-pico = { version = "0.8.0", features = ["rp2040-e5"] }
usb-device = "0.2.9"
usbd-serial = "0.1.1"

[build-dependencies]
cc = "1.0.83"
